# tc_fiap_fase1

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  fly.api.toml  fly.dashboard.toml  fly.toml  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile.api  Dockerfile.dashboard  entrypoint.api.sh  entrypoint.sh
docs/: script_scraper.md  use_case.ipynb  use_case_md
migrations/: env.py
migrations/versions/: 928b9df628c4_criação_inicial_das_tabelas.py  9587042007b9_create_books_table.py  9931bb86f014_create_users_table.py
src/api_books/: health_check.py  logging_config.py  main.py  ml_model.py  models.py  schemas.py  settings.py
src/api_books/database/: books.py  connection.py  users.py
src/api_books/endpoints/: auth.py  books.py  health.py  insights.py  ml.py  scraping.py  users.py
src/api_books/middlewares/: logging.py
src/api_books/security/: auth.py
src/api_books/services/: scraper.py  scraper_exception.py  update_db_from_csv.py
src/api_books_tc/: database copy.py  database.py  health_check.py  main.py  models.py  schemas.py  security.py  settings.py
src/api_books_tc/api/v1/endpoints/: auth.py  books.py  health.py  insights.py  scraping.py  users.py
src/api_books_tc/dashboard/: app.py  custom_locale.py
src/api_books_tc/database/: books.py  connection.py  users.py
src/api_books_tc/schemas/: users.py
src/api_books_tc/security/: auth.py
src/api_books_tc/services/: scraper.py  update_db_from_csv.py
src/dashboard/: api_client.py  app.py
tests/: conftest.py  dummy_factory.py  test_app.py  test_books.py  test_health.py  test_insights.py  test_scraping.py  test_security.py  test_users.py
